--- a/css/style.css
+++ b/css/style.css
@@ -63,3 +63,20 @@ ul.navbar li:hover > ul { opacity: 1; visibility: visible; left: 0; max-height: 
 ul.navbar > li:hover > ul { opacity: 1; visibility: visible; top: 100%; left: 0; }
 ul.navbar li > ul  ul { top: 0; left: 90%; }
 ul.navbar li > ul li:hover > ul { left: 100%; }
+
+
+
+.tex{
+  width: 100%;
+  height: 100vh;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  align-content: center;
+  justify-content:center;
+}
+.tex-p{
+  font-size: 40px;
+}
