--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@
 .cf {
     *zoom: 1;
 }
-
+*{margin: 0;
+padding: 0;}
 body {
   font: 9px "open sans", Arial, sans-serif;
   background:#94D4FF;
@@ -20,8 +21,8 @@ body {
 
 ul.navbar {
   background: #fff; /* Old browsers */
-  width: 960px;
-  margin: 2em auto;
+ width: 100%;
+  margin: 3em auto;
 }
 
 ul.navbar li {
@@ -38,6 +39,7 @@ ul.navbar li a {
 	text-decoration: none;
 	text-transform: uppercase;
 	transition: all .2s ease-in-out;
+  font: 13px sans-serif;
 }
 
 ul.navbar li a:hover,
@@ -76,8 +78,16 @@ ul.navbar li > ul li:hover > ul { left: 100%; }
   display: -o-flex;
   display: flex;
   align-content: center;
-  justify-content:center;
+  flex-direction: column;
+  align-items: center;
 }
 .tex-p{
   font-size: 40px;
+  margin: 10px;
+}
+
+.img-error{
+  width: 40%;
+/*height: 50vh;*/
+margin: 10px;
 }
